# Wikimpacts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Llama2_Reversed_Prompt.ipynb  Llama2_Run_300_Events.py  Llama2_Subevent_Extractor.ipynb  Mistral_Main_Event_Pipeline.ipynb  Mistral_Run_300_Events.py  README.md  agg.ipynb  eval.sh  evaluation_fix_json.ipynb  impact.db  impact.v1.db  impact_slim.v1.db  impactdb.v1.1.raw.db  pyproject.toml  pytest.ini  wiki_scraping.ipynb
Annotation_V2/: create_db.py  impactDB_gold_V2.db
BERT_Classification_EN_WIKI/: Classification_wikipedia.py  Classifier_implement.py  README.md  shuffled_training_dataset.csv  wikipedia_dataset_preforclassify_20240229.csv
Database/: EUR_convert.py  GADM_world.csv  chunk_large_json.py  convert_currency_EUR.py  create_db.py  fill_data_gap.py  fix_json_inconsistencies.py  fix_nested_json.py  from_gold_from_excel.py  gold_from_excel.py  gold_from_excel_V2.py  impact.db  insert_events.py  insert_full_run.sh  insert_main_events.py  insert_sub_events.py  merge_json_output.py  norm_utils.py  normalize_locs.py  normalize_nums.py  normalize_utils.py  parse_events.py  parse_events_0625.py  parse_events_original.py  parse_full_run.sh  schema.sql
Datasets/: ImpactDB_DataTable_Windstorms_v2.xlsx  result_300links_workflow_GPT3.5_sum_GPT4_extract_V1.xlsx  screate_db.py  text_sum_GPT3.5_processed.csv
Evaluation/: comparer.py  evaluate_full_run.sh  evaluator.py  evaluator_original_shorouq.py  matcher.py  normaliser.py  utils.py  weights.py
Evaluation_V2/: README.md  comparer.py  comparison-test.py  evaluate_full_run.sh  evaluator.py  matcher.py  normaliser.py  weights.py
Guidelines/: README.md
Keywords_searching/: README.md  keywords_searching_wiki.py  wiki_keyword_mining_result_2024_02_29_updated_duplicates_cleaned.csv
Playdata/: Playdata(Deaths).csv  Playdata(Injuries).csv  Playdata(Residence).csv
Prompts/: Prompts_GPT4_NUM_DEATH.txt  Prompts_GPT4_location_time_perils_event.txt  Prompts_all_category_GPT4.txt
Scripts/: comparer.py  comparison-analysis-240223.ipynb  comparison-analysis.ipynb  comparison-test.py  evaluate.ipynb  evaluator.py  normaliser.py
Visualizations/: points.geojson
evaluation/: comparer_300_events.py  comparison_300_events.ipynb  normaliser.py
full_run_25_deduplicated/: non-english-locations.csv
gpt4omini-experiments/: run_gpt.py  utils.py
helper_notebooks/: merge_json.ipynb
impactdb.v1.0.dg_filled.db_insertion_errors/: db_insert_errors_l2_Instance_Per_Administrative_Areas_Displaced_1732451250.json  (+4 more)
open_source_exp/: post_process.py  run_llm.py  (+1 more)
(+43074 files in other folders)
