[tool.poetry]
name = "wikimpacts"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
normalizer = "^0.2.1"
dateparser = "^1.2.0"
text2num = "^2.5.0"
pandas = "^2.2.1"
shortuuid = "^1.0.13"
pyarrow = "^15.0.2"
pre-commit = "^3.6.2"
spacy = "^3.7.4"
regex = "^2023.12.25"
num2words = "^0.5.13"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
